--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1> Isso é um título</h1>
         <h2> Isso é um subtitulo </h2>
         <p>isso é um paragráfo</p>
-        <img src="E:\Curso HTML-CSS\html.png" alt="Logo HTML 5">
+        <img src="E:\Curso HTML-CSS\html.png" alt="Logo HTML 5"> <!--Usar caminhos diferentes enquanto usar repos offline -->
     </body>    
 </html>
