Adição caminho de imagem em outro repo local

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <h1> Isso é um título</h1>
         <h2> Isso é um subtitulo </h2>
         <p>isso é um paragráfo</p>
-        <img src="E:\Curso HTML-CSS\html.png" alt="Logo HTML 5"> <!--Usar caminhos diferentes enquanto usar repos offline -->
+        <img src="C:\Users\Villela\Desktop\CursoCSS\Curso-HTML-CSS\html.png" alt="Logo HTML 5"> <!--Usar caminhos diferentes enquanto usar repos offline -->
     </body>    
 </html>
+
+<!--caminho pc casa "E:\Curso HTML-CSS\html.png"
+    caminho villela C:\Users\Villela\Desktop\CursoCSS\Curso-HTML-CSS-->
