Alteração total no projeto (inciando FIGMA)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Curso CSS e HTML</title>    
-    </head>
-    <body>
-        <h1> Isso é um título</h1>
-        <h2> Isso é um subtitulo </h2>
-        <p>isso é um paragráfo</p>
-        <img src="C:\Users\Villela\Desktop\CursoCSS\Curso-HTML-CSS\html.png" alt="Logo HTML 5"> <!--Usar caminhos diferentes enquanto usar repos offline -->
-    </body>    
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portifólio</title>
+</head>
+<body>
+    <header></header>
+    <main></main>
+    <footer></footer>    
+</body>
 </html>
-
-<!--caminho pc casa "E:\Curso HTML-CSS\html.png"
-    caminho villela C:\Users\Villela\Desktop\CursoCSS\Curso-HTML-CSS-->
