--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Portfólio — Gabriel Rodrigues</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>    
+    <main class="container">
+        <section class="intro">
+            <h1 class="intro__title">
+                Porque cabelo bem feito
+                <strong class="mark-title">MUDA TUDO!</strong>
+            </h1>
+
+            <h2 class="intro__subtitle">Aqui tu vai ver um pouco do meu trampo nos cortes.</h2>
+
+            <p class="intro__text1">
+                A ideia é simples: mostrar na prática como cada cliente sai daqui diferente, com o estilo em dia e na
+                régua.
+            </p>
+
+            <p class="intro__text1">Não importa se é aquele corte básico pra manter a firmeza ou algo mais ousado pra
+                mudar o visual.
+                O foco é sempre deixar o cabelo alinhado e o cliente satisfeito.</p>
+
+            <div class="actions">
+                <h2 class="actions_text">Marque um horário!</h2>
+                <a class="btn" href="https://www.instagram.com/rodrigues_gabriel051/" target="_blank"
+                    rel="noopener noreferrer">Instagram</a>
+                <a class="btn" href="https://wa.link/tyi17g" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+            </div>
+        </section>
+
+        <figure class="img">
+            <img src="corte.png" alt="Cliente com corte masculino estilizado">
+        </figure>
+    </main>
+
+    <footer class="site-footer">
+        Powered by <a href="https://www.instagram.com/alone.lineess/" target="_blank"
+            rel="noopener noreferrer">alone</a>
+    </footer>
 </body>
+
 </html>
