--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="intro">
             <h1 class="intro__title">
                 Porque cabelo bem feito
-                <strong class="mark-title">MUDA TUDO!</strong>
+                <strong class="mark-title">MUDA TUDO!!!</strong>
             </h1>
 
             <h2 class="intro__subtitle">Aqui tu vai ver um pouco do meu trampo nos cortes.</h2>
@@ -37,7 +37,7 @@
         </section>
 
         <figure class="img">
-            <img src="corte.png" alt="Cliente com corte masculino estilizado">
+            <img src="img/corte.png" alt="Cliente com corte masculino estilizado">
         </figure>
     </main>
 
