--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Portfólio — Gabriel Rodrigues</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
+    <header class="site-header">
+        <nav class="site-header_Menu">
+            <a class="site-header_Menu_link" href="index.html">Home</a>
+            <a class="site-header_Menu_link" href="about.html">FAQ</a>
+        </nav>
+    </header>
     <main class="container">
         <section class="intro">
             <h1 class="intro__title">
@@ -31,14 +37,20 @@
             <h2 class="actions_text">Marque um horário!</h2>
 
             <div class="actions">
-                <a class="btn" href="https://www.instagram.com/rodrigues_gabriel051/" target="_blank"
-                    rel="noopener noreferrer">Instagram</a>
-                <a class="btn" href="https://wa.link/tyi17g" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+                <a class="btn" href="https://www.instagram.com/rodrigues_gabriel051/" target="_blank">
+                    <img src="styles/assets/insta.png" alt="Instagram" class="icon">
+                    Instagram
+                </a>
+                <a class="btn" href="https://wa.link/tyi17g" target="_blank">
+                    <img src="styles/assets/wpp.png" alt="WhatsApp" class="icon">
+                    WhatsApp
+                </a>
             </div>
+
         </section>
 
-        <figure class="img">
-            <img src="img/corte.png" alt="Cliente com corte masculino estilizado">
+        <figure class="banner1">
+            <img src="styles/assets/corte.png" alt="Cliente com corte masculino estilizado">
         </figure>
     </main>
 
