Mudança em tags

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio — Gabriel Rodrigues - FAQ</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/Styles/styles.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                 birol parela maxime infena. Excepteur sint occaecat cupidatat non.</p>
         </section>
         <figure class="banner1">
-            <img src="styles/assets/corte.png" alt="Cliente com corte masculino estilizado">
+            <img src="Styles/assets/corte.png" alt="Cliente com corte masculino estilizado">
         </figure>
     </main>
     <footer class="site-footer">
