--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Portfólio — Gabriel Rodrigues</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/Styles/styles.css">
 </head>
 
 <body>
@@ -38,11 +38,11 @@
 
             <div class="actions">
                 <a class="btn" href="https://www.instagram.com/rodrigues_gabriel051/" target="_blank">
-                    <img src="styles/assets/insta.png" alt="Instagram" class="icon">
+                    <img src="Styles/assets/insta.png" alt="Instagram" class="icon">
                     Instagram
                 </a>
                 <a class="btn" href="https://wa.link/tyi17g" target="_blank">
-                    <img src="styles/assets/wpp.png" alt="WhatsApp" class="icon">
+                    <img src="Styles/assets/wpp.png" alt="WhatsApp" class="icon">
                     WhatsApp
                 </a>
             </div>
@@ -50,7 +50,7 @@
         </section>
 
         <figure class="banner1">
-            <img src="styles/assets/corte.png" alt="Cliente com corte masculino estilizado">
+            <img src="Styles/assets/corte.png" alt="Cliente com corte masculino estilizado">
         </figure>
     </main>
 
